# web_mapping

./: .gitignore  AH.html  Desktop.ini  ESA_legend.html  README.md  interland_bound.geojson  interland_bound.qmd  ken_bound.geojson  ken_bound.qmd  main.py  map-with-title.html  map.html  map2.html  mukuru.geojson  mukuru.qmd  mukuru.tif.aux.xml  processor.ipynb  pyproject.toml  sok.csv  split_map.ipynb
