[project]
name = "webmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
]


[dependency-groups]
dev = [
    "pyclean>=3.1.0",
    "ruff>=0.12.9",
]
